--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@finarum/sip-phone-dial",
-  "version": "1.0.3",
+  "version": "2.0.0",
   "private": false,
   "type": "module",
   "files": [
@@ -28,12 +28,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/colors": "^3.0.0",
     "@types/jssip": "^3.5.4",
     "jssip": "^3.10.1",
+    "mitt": "^3.0.1",
     "vue-i18n": "^9.14.5",
     "vueex": "^0.1.4"
   },
   "peerDependencies": {
+    "@radix-ui/colors": "^3.0.0",
     "vue": "^3.5.24",
     "vuex": "^4.1.0"
   },
@@ -41,6 +44,9 @@
     "@types/node": "^24.10.1",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
+    "autoprefixer": "^10.4.23",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.19",
     "typescript": "~5.9.3",
     "vite": "^7.2.4",
     "vue-tsc": "^3.1.4"
