--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
     "@radix-ui/colors": "^3.0.0",
