--- a/package.json
+++ b/package.json
@@ -39,8 +39,7 @@
   "peerDependencies": {
     "@radix-ui/colors": "^3.0.0",
     "vue": "^3.5.24",
-    "vuex": "^4.1.0",
-    "No--package": "^4.1.0"
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
